--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ node_modules
 bower_components
 coverage
 *.log
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/gridstack.iml
+.idea/jsLibraryMappings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
